tests/testfiles/valid/conditional/logical_or_operation.c
int main() {
    int a = 1;
    int b = 2;
    if (a == 1 || b == 1) {
        a = 3;
    } else {
        a = 4;
    }
    return a;
}
