tests/testfiles/invalid/basic/multiple_return.c
int main(){
    int x = 1;
    return x;
    int x = 2;
    return x;
}